...
import 'package:flutter_svg/flutter_svg.dart';


AppBar appBar() {
  return AppBar(
    title: const Text(
      'Home',
      style: TextStyle(
          color: Colors.black, fontSize: 18, fontWeight: FontWeight.bold),
    ),
    backgroundColor: Colors.white,
    elevation: 0.0,
    centerTitle: true,
...
