...
              items: [
                BottomNavigationBarItem(
                  icon: _buildNavItem('assets/icons/Home1.svg', 0, navigationProvider),
                  label: widget.disableNavBar == true ? 'Disabled' : '',
                ),
                BottomNavigationBarItem(
                  key: const Key('add_images_screen_nav'),
                  icon: _buildNavItem('assets/icons/Plus_circle.svg', 1, navigationProvider),
                  label: widget.disableNavBar == true ? 'Disabled' : '',
                ),
                BottomNavigationBarItem(
                  key: const Key('view_gallery_screen_nav'),
                  icon: _buildNavItem('assets/icons/Folder.svg', 2, navigationProvider),
...
